--- a/7.10/Dockerfile
+++ b/7.10/Dockerfile
@@ -42,7 +42,7 @@ ENV NUXEOCTL /var/lib/nuxeo/server/bin/nuxeoctl
 
 # Add distribution
 ENV NUXEO_MD5 de2084b1a6fab4b1c8fb769903b044f2
-ADD http://www.nuxeo.org/static/latest-release/nuxeo,cap,tomcat,zip,7.10 /tmp/nuxeo-distribution-tomcat.zip
+ADD http://community.nuxeo.com/static/releases/nuxeo-7.10/nuxeo-cap-7.10-tomcat.zip /tmp/nuxeo-distribution-tomcat.zip
 RUN echo "$NUXEO_MD5 /tmp/nuxeo-distribution-tomcat.zip" | md5sum -c - \
     && mkdir -p /tmp/nuxeo-distribution \
     && unzip -q -d /tmp/nuxeo-distribution /tmp/nuxeo-distribution-tomcat.zip \
