--- a/7.10/Dockerfile
+++ b/7.10/Dockerfile
@@ -1,6 +1,6 @@
 # vim:set ft=dockerfile:
 FROM       java:8
-MAINTAINER Nuxeo <contact@nuxeo.com>
+MAINTAINER Nuxeo <packagers@nuxeo.com>
 
 # grab gosu for easy step-down from root
 RUN gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4
@@ -14,7 +14,6 @@ RUN arch="$(dpkg --print-architecture)" \
 
 
 # Add needed convert tools
-RUN echo "deb http://httpredir.debian.org/debian jessie non-free" >> /etc/apt/sources.list
 RUN apt-get update && apt-get install -y --no-install-recommends \    
     perl \
     sudo \
@@ -22,39 +21,37 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     pwgen \
     imagemagick \
     ffmpeg2theora \
-    libfaac-dev \
     ufraw \
     poppler-utils \
     libreoffice \
     libwpd-tools \
-    gimp \
     exiftool \
     ghostscript \
+ && apt-get clean \
  && rm -rf /var/lib/apt/lists/*  
 
 # Create Nuxeo user
 RUN useradd -m -d /home/nuxeo -p nuxeo nuxeo && adduser nuxeo sudo && chsh -s /bin/bash nuxeo
 
 ENV NUXEO_VERSION 7.10
+ENV NUXEO_MD5 de2084b1a6fab4b1c8fb769903b044f2
 ENV NUXEO_USER nuxeo
-ENV NUXEO_HOME /var/lib/nuxeo/server
-ENV NUXEOCTL /var/lib/nuxeo/server/bin/nuxeoctl
+ENV NUXEO_HOME /opt/nuxeo/server
+ENV NUXEOCTL $NUXEO_HOME/bin/nuxeoctl
 
 # Add distribution
-ENV NUXEO_MD5 de2084b1a6fab4b1c8fb769903b044f2
-ADD http://community.nuxeo.com/static/releases/nuxeo-7.10/nuxeo-cap-7.10-tomcat.zip /tmp/nuxeo-distribution-tomcat.zip
+ADD http://cdn.nuxeo.com/nuxeo-${NUXEO_VERSION}/nuxeo-cap-${NUXEO_VERSION}-tomcat.zip /tmp/nuxeo-distribution-tomcat.zip
 RUN echo "$NUXEO_MD5 /tmp/nuxeo-distribution-tomcat.zip" | md5sum -c - \
-    && mkdir -p /tmp/nuxeo-distribution \
+    && mkdir -p /tmp/nuxeo-distribution $(dirname $NUXEO_HOME) \
     && unzip -q -d /tmp/nuxeo-distribution /tmp/nuxeo-distribution-tomcat.zip \
     && DISTDIR=$(/bin/ls /tmp/nuxeo-distribution | head -n 1) \
-    && mkdir -p /var/lib/nuxeo/server \
-    && mv /tmp/nuxeo-distribution/$DISTDIR/* /var/lib/nuxeo/server \
+    && mv /tmp/nuxeo-distribution/$DISTDIR $NUXEO_HOME \
     && rm -rf /tmp/nuxeo-distribution* \
-    && chmod +x /var/lib/nuxeo/server/bin/nuxeoctl 
+    && chmod +x $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh
 
 
 
-WORKDIR /var/lib/nuxeo/server
+WORKDIR $NUXEO_HOME
 COPY docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
 EXPOSE 8080
