Adds an additionnal intialization possibility : scripts under /docker-entrypoint-initnuxeo.d are run before starting the service. This behavior is copied Adds two environnement variables to allow the use of this image in a cluster       - NUXEO_TRANSIENT_STORE       - NUXEO_BINARY_STORE

--- a/6.0/Dockerfile
+++ b/6.0/Dockerfile
@@ -50,6 +50,7 @@ RUN curl -fsSL "http://cdn.nuxeo.com/nuxeo-${NUXEO_VERSION}/nuxeo-cap-${NUXEO_VE
     && rm -rf /tmp/nuxeo-distribution* \
     && chmod +x $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh
 
+RUN mkdir /docker-entrypoint-initnuxeo.d
 ENV PATH $NUXEO_HOME/bin:$PATH
 
 WORKDIR $NUXEO_HOME
