Rely on nuxeo/nuxeo image for the discover* images

--- a/discover-lts/Dockerfile
+++ b/discover-lts/Dockerfile
@@ -1,5 +1,5 @@
 # vim:set ft=dockerfile:
-FROM       nuxeo:LTS
+FROM       nuxeo/nuxeo:LTS
 MAINTAINER Nuxeo <packagers@nuxeo.com>
 RUN perl -p -i -e "s/^#?nuxeo.wizard.done=.*$/nuxeo.wizard.done=false/g" /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
