Convert from "java" (deprecated as of 2016-12-31) to "openjdk"

--- a/5.8/Dockerfile
+++ b/5.8/Dockerfile
@@ -1,5 +1,5 @@
 # vim:set ft=dockerfile:
-FROM       java:7-jre
+FROM       openjdk:7-jre
 MAINTAINER Nuxeo <packagers@nuxeo.com>
 
 # Create Nuxeo user
