NXP-21412 add a docker image aligned on master

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: bash
 services: docker
 
 env:
+  - VERSION=master
+  - VERSION=8.10
   - VERSION=7.10
-  - VERSION=7.4
   - VERSION=6.0
 
 install:
