--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -4,19 +4,7 @@ MAINTAINER Nuxeo <packagers@nuxeo.com>
 
 # Create Nuxeo user
 ENV NUXEO_USER nuxeo
-RUN useradd -m -d /home/$NUXEO_USER -s /bin/bash $NUXEO_USER
-
-# grab gosu for easy step-down from root
-ENV GOSU_VERSION 1.7
-RUN set -x \
-	&& wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$(dpkg --print-architecture)" \
-	&& wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$(dpkg --print-architecture).asc" \
-	&& export GNUPGHOME="$(mktemp -d)" \
-	&& gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
-	&& gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
-	&& rm -r "$GNUPGHOME" /usr/local/bin/gosu.asc \
-	&& chmod +x /usr/local/bin/gosu \
-	&& gosu nobody true
+RUN useradd -m -d /home/$NUXEO_USER -u 1000 -s /bin/bash $NUXEO_USER
 
 # Add needed convert tools
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -33,20 +21,42 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     ghostscript \
  && rm -rf /var/lib/apt/lists/*
 
-ENV NUXEO_VERSION master
+
+
 ENV NUXEO_HOME /opt/nuxeo/server
 
+ARG NUXEO_VERSION=master
+ARG NUXEO_DIST_URL=http://community.nuxeo.com/static/latest-snapshot/nuxeo-server-tomcat,SNAPSHOT.zip
+
 # Add distribution
-RUN curl -fsSL "http://community.nuxeo.com/static/latest-snapshot/nuxeo-server-tomcat,SNAPSHOT.zip" -o /tmp/nuxeo-distribution-tomcat.zip \
+RUN curl -fsSL "${NUXEO_DIST_URL}" -o /tmp/nuxeo-distribution-tomcat.zip \
     && mkdir -p /tmp/nuxeo-distribution $(dirname $NUXEO_HOME) \
     && unzip -q -d /tmp/nuxeo-distribution /tmp/nuxeo-distribution-tomcat.zip \
     && DISTDIR=$(/bin/ls /tmp/nuxeo-distribution | head -n 1) \
     && mv /tmp/nuxeo-distribution/$DISTDIR $NUXEO_HOME \
     && sed -i -e "s/^org.nuxeo.distribution.package.*/org.nuxeo.distribution.package=docker/" $NUXEO_HOME/templates/common/config/distribution.properties \
     && rm -rf /tmp/nuxeo-distribution* \
-    && chmod +x $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh
+    && chmod +x $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh \
+    # For arbitrary user in the admin group
+    && chmod g+rwX $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh
 
-RUN mkdir /docker-entrypoint-initnuxeo.d
+
+RUN chown -R 1000:0 $NUXEO_HOME && chmod -R g+rwX $NUXEO_HOME
+
+# Protecting writeable directories to support arbitrary User IDs for OpenShift
+# https://docs.openshift.com/container-platform/3.4/creating_images/guidelines.html
+RUN mkdir -p /var/lib/nuxeo/data \
+    && chown -R 1000:0 /var/lib/nuxeo/data && chmod -R g+rwX /var/lib/nuxeo/data \
+    && mkdir -p /var/log/nuxeo \
+    && chown -R 1000:0 /var/log/nuxeo && chmod -R g+rwX /var/log/nuxeo \
+    && mkdir -p /var/run/nuxeo \
+    && chown -R 1000:0 /var/run/nuxeo && chmod -R g+rwX /var/run/nuxeo \
+    && mkdir -p /docker-entrypoint-initnuxeo.d \
+    && chown -R 1000:0 /docker-entrypoint-initnuxeo.d && chmod -R g+rwX /docker-entrypoint-initnuxeo.d 
+
+# Remove setuid/setgid binaries from images for security
+RUN find / -perm +6000 -type f -exec chmod a-s {} \; || true
+
 ENV PATH $NUXEO_HOME/bin:$PATH
 
 WORKDIR $NUXEO_HOME
@@ -55,3 +65,6 @@ ENTRYPOINT ["/docker-entrypoint.sh"]
 EXPOSE 8080
 EXPOSE 8787
 CMD ["nuxeoctl","console"]
+
+
+USER 1000
