--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -2,10 +2,6 @@
 FROM       openjdk:8-jdk
 MAINTAINER Nuxeo <packagers@nuxeo.com>
 
-# Create Nuxeo user
-ENV NUXEO_USER nuxeo
-RUN useradd -m -d /home/$NUXEO_USER -u 1000 -s /bin/bash $NUXEO_USER
-
 # Add needed convert tools
 RUN apt-get update && apt-get install -y --no-install-recommends \
     perl \
@@ -22,11 +18,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
  && rm -rf /var/lib/apt/lists/*
 
 
+# Remove setuid/setgid binaries from images for security
+RUN find / -perm +6000 -type f -exec chmod a-s {} \; || true
 
+ENV NUXEO_USER nuxeo
 ENV NUXEO_HOME /opt/nuxeo/server
-
 ARG NUXEO_VERSION=master
 ARG NUXEO_DIST_URL=http://community.nuxeo.com/static/latest-snapshot/nuxeo-server-tomcat,SNAPSHOT.zip
+
+# Create Nuxeo user
+RUN useradd -m -d /home/$NUXEO_USER -u 1000 -s /bin/bash $NUXEO_USER
 
 # Add distribution
 RUN curl -fsSL "${NUXEO_DIST_URL}" -o /tmp/nuxeo-distribution-tomcat.zip \
@@ -38,14 +39,18 @@ RUN curl -fsSL "${NUXEO_DIST_URL}" -o /tmp/nuxeo-distribution-tomcat.zip \
     && rm -rf /tmp/nuxeo-distribution* \
     && chmod +x $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh \
     # For arbitrary user in the admin group
-    && chmod g+rwX $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh
+    && chmod g+rwX $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh \
+    && $NUXEO_HOME/bin/nuxeoctl mp-init
 
-
-RUN chown -R 1000:0 $NUXEO_HOME && chmod -R g+rwX $NUXEO_HOME
+COPY docker-template $NUXEO_HOME/templates/docker
+COPY nuxeo.conf /etc/nuxeo/nuxeo.conf.template
+ENV NUXEO_CONF /etc/nuxeo/nuxeo.conf
 
 # Protecting writeable directories to support arbitrary User IDs for OpenShift
 # https://docs.openshift.com/container-platform/3.4/creating_images/guidelines.html
-RUN mkdir -p /var/lib/nuxeo/data \
+RUN chown -R 1000:0 $NUXEO_HOME && chmod -R g+rwX $NUXEO_HOME \
+    && chown -R 1000:0 /etc/nuxeo && chmod g+rwX /etc/nuxeo && rm -f $NUXEO_HOME/bin/nuxeo.conf \
+    && mkdir -p /var/lib/nuxeo/data \
     && chown -R 1000:0 /var/lib/nuxeo/data && chmod -R g+rwX /var/lib/nuxeo/data \
     && mkdir -p /var/log/nuxeo \
     && chown -R 1000:0 /var/log/nuxeo && chmod -R g+rwX /var/log/nuxeo \
@@ -53,9 +58,6 @@ RUN mkdir -p /var/lib/nuxeo/data \
     && chown -R 1000:0 /var/run/nuxeo && chmod -R g+rwX /var/run/nuxeo \
     && mkdir -p /docker-entrypoint-initnuxeo.d \
     && chown -R 1000:0 /docker-entrypoint-initnuxeo.d && chmod -R g+rwX /docker-entrypoint-initnuxeo.d 
-
-# Remove setuid/setgid binaries from images for security
-RUN find / -perm +6000 -type f -exec chmod a-s {} \; || true
 
 ENV PATH $NUXEO_HOME/bin:$PATH
 
@@ -65,6 +67,5 @@ ENTRYPOINT ["/docker-entrypoint.sh"]
 EXPOSE 8080
 EXPOSE 8787
 CMD ["nuxeoctl","console"]
-
 
 USER 1000
