--- a/templates/pre-9.1/Dockerfile-run
+++ b/templates/pre-9.1/Dockerfile-run
@@ -1,31 +1,7 @@
-# vim:set ft=dockerfile:
-FROM       openjdk:8-jdk
-MAINTAINER Nuxeo <packagers@nuxeo.com>
-
-# Add needed convert tools
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    perl \
-    locales \
-    pwgen \
-    imagemagick \
-    ffmpeg2theora \
-    ufraw \
-    poppler-utils \
-    libreoffice \
-    libwpd-tools \
-    exiftool \
-    ghostscript \
- && rm -rf /var/lib/apt/lists/*
-
 # Remove setuid/setgid binaries from images for security
 RUN find / -perm +6000 -type f -exec chmod a-s {} \; || true
 
-ENV NUXEO_USER nuxeo
-ENV NUXEO_HOME /opt/nuxeo/server
-ARG NUXEO_VERSION=6.0
-ARG NUXEO_DIST_URL=http://community.nuxeo.com/static/releases/nuxeo-6.0/nuxeo-cap-6.0-tomcat.zip
-ARG NUXEO_MD5=b8cbc0b2858b0697a541be49feb24571
-
+%%ENV%%
 
 # Create Nuxeo user
 RUN useradd -m -d /home/$NUXEO_USER -u 1000 -s /bin/bash $NUXEO_USER
