--- a/master/centos/nuxeo.conf
+++ b/master/centos/nuxeo.conf
@@ -54,3 +54,5 @@ nuxeo.wizard.done=${env:NUXEO_WIZARD:true}
 
 nuxeo.transientstore.default.path=${env:NUXEO_TRANSIENT_STORE}
 
+org.nuxeo.runtime.reload_strategy=${env:NUXEO_RELOAD_STRATEGY:unstash}
+
