NXP-22863 add other mandatory parameters

--- a/9.2/centos/nuxeo.conf
+++ b/9.2/centos/nuxeo.conf
@@ -56,3 +56,6 @@ nuxeo.transientstore.default.path=${env:NUXEO_TRANSIENT_STORE}
 
 org.nuxeo.runtime.reload_strategy=${env:NUXEO_RELOAD_STRATEGY:unstash}
 
+audit.elasticsearch.enabled=${env:NUXEO_AUDIT_ES_ENABLED:true}
+elasticsearch.httpEnabled=${env:NUXEO_ES_HTTP_ENABLED:true}
+
