--- a/templates/Dockerfile.rhel
+++ b/templates/Dockerfile.rhel
@@ -50,4 +50,7 @@ RUN yum -y upgrade && yum -y install \
     ghostscript \
     && yum clean all
 
+ADD licences /licences
+ADD help.1 /help.1
+
 %%RUN%%
