--- a/master/rhel/Dockerfile
+++ b/master/rhel/Dockerfile
@@ -50,6 +50,9 @@ RUN yum -y upgrade && yum -y install \
     ghostscript \
     && yum clean all
 
+ADD licences /licences
+ADD help.1 /help.1
+
 
 # Remove setuid/setgid binaries from images for security
 RUN find / -perm +6000 -type f -exec chmod a-s {} \; || true
