NXP-23136 remove sql template from default templates

--- a/templates/pre-9.3/nuxeo.conf
+++ b/templates/pre-9.3/nuxeo.conf
@@ -22,7 +22,7 @@ JAVA_OPTS=$JAVA_OPTS -Xloggc:"${nuxeo.log.dir}/gc.log" -verbose:gc -XX:+PrintGCD
 
 
 nuxeo.force.generation=true
-nuxeo.templates=${env:NUXEO_DB_TYPE:default},docker,${env:NUXEO_TEMPLATES:docker}
+nuxeo.templates=${env:NUXEO_DB_TYPE:default,sql},docker,${env:NUXEO_TEMPLATES:docker}
 
 nuxeo.db.host=${env:NUXEO_DB_HOST:localhost}
 nuxeo.db.name=${env:NUXEO_DB_NAME:nuxeo}
