Comment out debugging port.

--- a/9.2/Dockerfile
+++ b/9.2/Dockerfile
@@ -66,7 +66,7 @@ ENV PATH $NUXEO_HOME/bin:$PATH
 WORKDIR $NUXEO_HOME
 COPY $NUXEO_VERSION/docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
-EXPOSE 8787
+#EXPOSE 8787
 EXPOSE 8080
 CMD ["nuxeoctl","console"]
 
