Fixes patch error in pipeline and version ref for 9.3.

--- a/9.2/pipeline.yml
+++ b/9.2/pipeline.yml
@@ -65,7 +65,7 @@ jobs:
   serial_groups: [version]
   plan:
   - get: version
-    passed: [build]
+    passed: [shipit]
     params: {bump: patch, pre: rc}
     trigger: true
   - put: version
