NXP-24188 fix typo

--- a/9.10/centos/nuxeo.conf
+++ b/9.10/centos/nuxeo.conf
@@ -32,7 +32,7 @@ nuxeo.db.password=${env:NUXEO_DB_PASSWORD:nuxeo}
 nuxeo.url=${env:NUXEO_URL}
 
 elasticsearch.addressList=${env:NUXEO_ES_HOSTS}
-elasticsearch.clusterName=${env:NUXEO_ES_CLUSTERNAME}
+elasticsearch.clusterName=${env:NUXEO_ES_CLUSTER_NAME}
 elasticsearch.indexName=${env:NUXEO_ES_INDEX_NAME}
 elasticsearch.indexNumberOfReplicas=${env:NUXEO_ES_REPLICAS}
 elasticsearch.indexNumberOfShards=${env:NUXEO_ES_SHARDS}
