Make the 9.10 docker work for PCF.

--- a/9.10/Dockerfile
+++ b/9.10/Dockerfile
@@ -15,8 +15,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     exiftool \
     ghostscript \
     libreoffice \
+	ffmpeg \
  && rm -rf /var/lib/apt/lists/*
 
+# Install FFMPEG
+RUN wget http://apt.nuxeo.org/pool/releases/ffmpeg-nuxeo_2.8.5-1_amd64.deb
+RUN    dpkg -i ffmpeg-nuxeo_2.8.5-1_amd64.deb
 
 # Remove setuid/setgid binaries from images for security
 RUN find / -perm +6000 -type f -exec chmod a-s {} \; || true
@@ -45,8 +49,8 @@ RUN curl -fsSL "${NUXEO_DIST_URL}" -o /tmp/nuxeo-distribution-tomcat.zip \
     && chmod g+rwX $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh \
     && $NUXEO_HOME/bin/nuxeoctl mp-init
 
-COPY docker-template $NUXEO_HOME/templates/docker
-COPY nuxeo.conf /etc/nuxeo/nuxeo.conf.template
+COPY $NUXEO_VERSION/docker-template $NUXEO_HOME/templates/docker
+COPY $NUXEO_VERSION/nuxeo.conf /etc/nuxeo/nuxeo.conf.template
 ENV NUXEO_CONF /etc/nuxeo/nuxeo.conf
 
 # Protecting writeable directories to support arbitrary User IDs for OpenShift
@@ -65,10 +69,10 @@ RUN chown -R 1000:0 $NUXEO_HOME && chmod -R g+rwX $NUXEO_HOME \
 ENV PATH $NUXEO_HOME/bin:$PATH
 
 WORKDIR $NUXEO_HOME
-COPY docker-entrypoint.sh /
+COPY $NUXEO_VERSION/docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
 EXPOSE 8080
-EXPOSE 8787
+#EXPOSE 8787
 CMD ["nuxeoctl","console"]
 
 USER 1000
