--- a/templates/Dockerfile-run
+++ b/templates/Dockerfile-run
@@ -36,7 +36,8 @@ RUN chown -R 1000:0 $NUXEO_HOME && chmod -R g+rwX $NUXEO_HOME \
     && mkdir -p /var/run/nuxeo \
     && chown -R 1000:0 /var/run/nuxeo && chmod -R g+rwX /var/run/nuxeo \
     && mkdir -p /docker-entrypoint-initnuxeo.d \
-    && chown -R 1000:0 /docker-entrypoint-initnuxeo.d && chmod -R g+rwX /docker-entrypoint-initnuxeo.d 
+    && chown -R 1000:0 /docker-entrypoint-initnuxeo.d && chmod -R g+rwX /docker-entrypoint-initnuxeo.d  \
+    && chmod g=u /etc/passwd
 
 ENV PATH $NUXEO_HOME/bin:$PATH
 
