--- a/7.10/centos/Dockerfile
+++ b/7.10/centos/Dockerfile
@@ -30,7 +30,7 @@ RUN yum -y upgrade && yum -y install \
     ghostscript
 
 # Remove setuid/setgid binaries from images for security
-RUN find / -perm +6000 -type f -exec chmod a-s {} \; || true
+RUN find / -perm 6000 -type f -exec chmod a-s {} \; || true
 
 ENV NUXEO_USER nuxeo
 ENV NUXEO_HOME /opt/nuxeo/server
