--- a/10.1/centos/Dockerfile
+++ b/10.1/centos/Dockerfile
@@ -31,7 +31,7 @@ RUN yum -y upgrade && yum -y install \
 
 
 # Remove setuid/setgid binaries from images for security
-RUN find / -perm +6000 -type f -exec chmod a-s {} \; || true
+RUN find / -perm 6000 -type f -exec chmod a-s {} \; || true
 
 ENV NUXEO_USER nuxeo
 ENV NUXEO_HOME /opt/nuxeo/server
