--- a/templates/Dockerfile-run
+++ b/templates/Dockerfile-run
@@ -1,6 +1,6 @@
 
 # Remove setuid/setgid binaries from images for security
-RUN find / -perm +6000 -type f -exec chmod a-s {} \; || true
+RUN find / -perm 6000 -type f -exec chmod a-s {} \; || true
 
 %%ENV%%
 
