--- a/templates/pre-9.1/Dockerfile-run
+++ b/templates/pre-9.1/Dockerfile-run
@@ -1,5 +1,5 @@
 # Remove setuid/setgid binaries from images for security
-RUN find / -perm +6000 -type f -exec chmod a-s {} \; || true
+RUN find / -perm 6000 -type f -exec chmod a-s {} \; || true
 
 %%ENV%%
 
