--- a/9.10/Dockerfile
+++ b/9.10/Dockerfile
@@ -23,6 +23,7 @@ RUN find / -perm 6000 -type f -exec chmod a-s {} \; || true
 
 ENV NUXEO_USER nuxeo
 ENV NUXEO_HOME /opt/nuxeo/server
+ENV HOME /opt/nuxeo/server
 ARG NUXEO_VERSION=9.10
 ARG NUXEO_DIST_URL=http://community.nuxeo.com/static/releases/nuxeo-9.10/nuxeo-server-9.10-tomcat.zip
 ARG NUXEO_MD5=327d23bbd5558565694027b11c0dd82a
