NXCT-64: add ffmpeg and x264 support

--- a/templates/Dockerfile.ubuntu
+++ b/templates/Dockerfile.ubuntu
@@ -15,6 +15,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     exiftool \
     ghostscript \
     libreoffice \
+    ffmpeg \
+    x264 \
  && rm -rf /var/lib/apt/lists/*
 
 %%RUN%%
