Set check interval to 5 min for build triggers.

--- a/9.10/pipeline.yml
+++ b/9.10/pipeline.yml
@@ -74,6 +74,7 @@ jobs:
 resources:
 - name: docker-nuxeo
   type: git
+  check_every: 5m
   source:
     uri: ((docker-nuxeo.git_uri))
     private_key: ((github.ssh_key))
