NXCT-194: small improvements on docker-entrypoint.sh and JAVA_OPTS (JDK 11)

--- a/master/centos/nuxeo.conf
+++ b/master/centos/nuxeo.conf
@@ -18,7 +18,7 @@ JAVA_OPTS=$JAVA_OPTS -Dfile.encoding=UTF-8 -Dmail.mime.decodeparameters=true
 JAVA_OPTS=$JAVA_OPTS -Djava.util.Arrays.useLegacyMergeSort=true
 
 ## Log Garbage Collector informations into a file
-JAVA_OPTS=$JAVA_OPTS -Xlog:gc*:file=${nuxeo.log.dir}/gc.log -verbose:gc
+JAVA_OPTS=$JAVA_OPTS -Xlog:gc*:file=${nuxeo.log.dir}/gc.log
 
 nuxeo.force.generation=true
 nuxeo.templates=${env:NUXEO_DB_TYPE:default},docker,${env:NUXEO_TEMPLATES:docker}
