NXP-28621: remove 'nuxeoctl mp-init' command call

--- a/templates/pre-11.1/Dockerfile-run
+++ b/templates/pre-11.1/Dockerfile-run
@@ -1,48 +1,8 @@
-# vim:set ft=dockerfile:
-FROM centos:7
-MAINTAINER Nuxeo <packagers@nuxeo.com>
-
-# install wget / tar
-RUN yum -y install wget tar
-
-# install java
-RUN wget https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz \
-    && echo "ce52c5844200c569a50a869e579d88f6 openjdk-11.0.2_linux-x64_bin.tar.gz" | md5sum -c - \
-    && tar zxvf openjdk-11.0.2_linux-x64_bin.tar.gz \
-    && mv jdk-11.0.2 /usr/local/
-ENV JAVA_HOME /usr/local/jdk-11.0.2
-
-#Add repositories need it for ffmpeg2theora and ffmpeg
-ARG NUX_GPG_KEY_URL=http://li.nux.ro/download/nux/RPM-GPG-KEY-nux.ro
-ARG NUX_DEXTOP_RPM_URL=http://li.nux.ro/download/nux/dextop/el7/x86_64/nux-dextop-release-0-1.el7.nux.noarch.rpm
-RUN yum -y install epel-release \
-    && rpm --import ${NUX_GPG_KEY_URL} \
-    && rpm -Uvh ${NUX_DEXTOP_RPM_URL}
-
-# Add needed convert tools
-RUN yum -y upgrade && yum -y install \
-    perl \
-    ImageMagick \
-    ffmpeg \
-    ffmpeg2theora \
-    ufraw \
-    poppler-utils \
-    libreoffice \
-    libwpd-tools \
-    perl-Image-ExifTool \
-    ghostscript
-
 
 # Remove setuid/setgid binaries from images for security
 RUN find / -perm 6000 -type f -exec chmod a-s {} \; || true
 
-ENV NUXEO_USER nuxeo
-ENV NUXEO_HOME /opt/nuxeo/server
-ENV HOME /opt/nuxeo/server
-ARG NUXEO_VERSION=master
-ARG NUXEO_DIST_URL=http://community.nuxeo.com/static/latest-snapshot/nuxeo-server-tomcat,SNAPSHOT.zip
-ARG NUXEO_MD5=noMD5check
-
+%%ENV%%
 
 # Create Nuxeo user
 RUN useradd -m -d /home/$NUXEO_USER -u 1000 -s /bin/bash $NUXEO_USER
@@ -59,6 +19,7 @@ RUN curl -fsSL "${NUXEO_DIST_URL}" -o /tmp/nuxeo-distribution-tomcat.zip \
     && chmod +x $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh \
     # For arbitrary user in the admin group
     && chmod g+rwX $NUXEO_HOME/bin/*ctl $NUXEO_HOME/bin/*.sh \
+    && $NUXEO_HOME/bin/nuxeoctl mp-init \
     && chown -R 1000:0 $NUXEO_HOME && chmod -R g+rwX $NUXEO_HOME
 
 COPY docker-template $NUXEO_HOME/templates/docker
